# secHNet

./: .gitignore  CHANGELOG.md  README.md  SUGGESTION.md  load_data.sh  sechnet.cabal  sekhnet.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/Data/: Dataloader.hs  Dataset.hs  Index.hs  Tensor.hs
src/Data/Dataset/: Dataloader.hs  Dataset.hs
src/Data/Layers/: Layer.hs
src/Data/Tensor/: AdvancedIndex.hs  Boolean.hs  Conv.hs  Definitions.hs  FloatTensor.hs  Functional.hs  Index.hs  Instances.hs  ListUtils.hs  PlainIndex.hs  Size.hs  TODO.md  Tensor.hs
src/Data/Tensor/cbits/: boolean.c  boolean.h  cbits.c  cbits.h  construct.c  construct.h  convert.c  convert.h  float_tensor.c  float_tensor.h  floating.c  floating.h  fold.c  fold.h  fractional.c  fractional.h  integral.c  integral.h  matmul.c  matmul.h  num.c  num.h  num_tensor.c  num_tensor.h  ord.c  ord.h
src/Data/Tensor/cbits/core/: core.c  core.h  dtype.h  index.h  tensor_index.h
src/Data/Tensor/cbits/template/: allclose.h  common.h  convert.h  elementwise.h  eye.h  fold.h  map.h  matmul.h  vectorized.h
src/Gradient/: Gradient.hs
src/Graph/: GMatrix.hs  Graph.hs
src/Handle/: LayerHandle.hs  OptimizerHandle.hs  TrainerHandle.hs
src/Layers/: Interpreter.hs  Layer.hs
src/NN/: Autograd.hs  NNDesigner.hs  Optimizer.hs
src/Optimizer/: Optimizer.hs  SGD.hs
src/graph/: gmatrix.hs  graph.hs  gtensor.hs
src/layers/: interpreter.hs  layer.hs
test/: Instances.hs  Spec.hs
