cabal-version:      2.4
name:               secHNet
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aleks Levin, Dmitry Sluch, Foma Shipilov
maintainer:         TurtlePU lmao

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sechnet
    main-is:          Main.hs
--    other-modules:    Bank.Handle
    build-depends:
      base
      , secHNet
      , containers
      , transformers
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules: 
      Graph.Graph
      , Graph.GTensor
    build-depends:
      base ^>=4.16
      , free
      , tensors
    hs-source-dirs:   src
    default-language: Haskell2010
