cabal-version:      2.4
name:               secHNet
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aleks Levin, Dmitry Sluch, Foma Shipilov
maintainer:         TurtlePU lmao

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sechnet
    main-is:          Main.hs
    build-depends:
      base
      , secHNet
      , containers
      , transformers
      , hashmap
      , matrix
      , conduit
      , mtl
      , vector
      , random
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:
        Data.Tensor.PlainIndex
        , Data.Tensor.Size
        , Data.Tensor.ListUtils
        , Data.Tensor.Definitions
        , Data.Tensor.Functional
        , Data.Tensor.Instances
        , Data.Tensor.Boolean
        , Data.Tensor.AdvancedIndex
        , Data.Tensor
        , Data.Layers.Layer
        , Handle.LayerHandle
        , Data.Dataset.Dataset
        , Data.Dataset.Dataloader
        , NN.NNDesigner
        , NN.Autograd
        , NN.Optimizer
        , Handle.OptimizerHandle
        , Handle.TrainerHandle
    build-depends:
      base ^>= 4.16
      , free
      , matrix ^>= 0.3.6.1
      , conduit
      , mtl ^>= 2.3.1
      , transformers
      , hashmap ^>= 1.3.3
      , bytestring
      , vector
      , random
      , normaldistribution
      , inline-c
    hs-source-dirs:   src
    default-language: Haskell2010
    C-sources:
      src/Data/Tensor/cbits/core/core.c
      , src/Data/Tensor/cbits/num.c
      , src/Data/Tensor/cbits/fractional.c
      , src/Data/Tensor/cbits/floating.c
      , src/Data/Tensor/cbits/integral.c
      , src/Data/Tensor/cbits/fold.c
      , src/Data/Tensor/cbits/boolean.c
      , src/Data/Tensor/cbits/construct.c
      , src/Data/Tensor/cbits/convert.c
      , src/Data/Tensor/cbits/matmul.c
    cc-options: -O3 -march=native -mno-vzeroupper
    extra-libraries: openblas
    ghc-options: -funbox-strict-fields

test-suite sechnet-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Instances
    build-depends:
      secHNet
      , base ^>=4.16
      , QuickCheck ^>=2.14
      , test-invariant
      , vector
      , random
    hs-source-dirs:   test
    default-language: Haskell2010
